fix(details): add wrapping for tags

--- a/src/pages/player/styles.module.scss
+++ b/src/pages/player/styles.module.scss
@@ -21,6 +21,7 @@ $viewport-breakpoint-xs: 688px;
 .tags {
   display: flex;
   column-gap: cs.$space-scaled-xxs;
+  flex-wrap: wrap;
 }
 @media screen and (max-width: $viewport-breakpoint-xs) {
   .player {
